[gd_scene load_steps=7 format=3 uid="uid://cwsx8h6hscjk8"]

[ext_resource type="FontFile" uid="uid://d1u4p5ul7hvoq" path="res://Fonts/Roboto-Bold.ttf" id="1_cxh07"]
[ext_resource type="Script" path="res://main.gd" id="1_daonq"]
[ext_resource type="FontFile" uid="uid://bli6uxdtn25ms" path="res://Fonts/Roboto-Regular.ttf" id="2_t4v6r"]
[ext_resource type="Texture2D" uid="uid://kkxvm5okyc26" path="res://PNG/OptAc.png" id="4_hbbbp"]
[ext_resource type="Texture2D" uid="uid://dai41dllyomo2" path="res://PNG/7.png" id="8_4j2w0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okulf"]
bg_color = Color(0.172549, 0.305882, 0.384314, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_daonq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 350.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_okulf")

[node name="current_result" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -233.0
offset_right = -11.0
offset_bottom = -173.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_cxh07")
theme_override_font_sizes/font_size = 50
text = "Current Result"
horizontal_alignment = 2

[node name="previous_result" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -262.0
offset_right = -13.0
offset_bottom = -231.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_t4v6r")
theme_override_font_sizes/font_size = 25
text = "Preivous Result"
horizontal_alignment = 2

[node name="btnAC" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 156.0
offset_right = 77.0
offset_bottom = 220.0
texture_normal = ExtResource("4_hbbbp")

[node name="btnNum7" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 246.0
offset_right = 75.0
offset_bottom = 310.0
texture_normal = ExtResource("8_4j2w0")

[connection signal="ready" from="Panel/current_result" to="." method="_on_current_result_ready"]
[connection signal="pressed" from="Panel/btnAC" to="." method="_on_btn_ac_pressed"]
[connection signal="pressed" from="Panel/btnNum7" to="." method="_on_btn_num_7_pressed"]
